--- a/index.html
+++ b/index.html
@@ -4,64 +4,145 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DaKoolKidz - ATM10 Server Status</title>
-  <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Press Start 2P', cursive; background: #0f172a; color: #22c55e; }
-    .minecraft { text-shadow: 3px 3px 0 #000; }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      font-family: 'Press Start 2P', cursive;
+      background: #0f172a;
+      color: #22c55e;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+    }
+    .container {
+      max-width: 480px;
+      width: 100%;
+      background: #18181b;
+      border: 4px solid #22c55e;
+      border-radius: 16px;
+      padding: 32px 24px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.6);
+      text-align: center;
+    }
+    h1 {
+      font-size: 2.2rem;
+      color: #fbbf24;
+      margin-bottom: 12px;
+      text-shadow: 3px 3px 0 #000;
+    }
+    .subtitle {
+      font-size: 1.1rem;
+      color: #86efac;
+      margin-bottom: 24px;
+    }
+    #status {
+      font-size: 1.8rem;
+      font-weight: bold;
+      margin-bottom: 24px;
+      min-height: 30px;
+    }
+    .players-box {
+      background: #000;
+      border: 2px solid #22c55e;
+      border-radius: 12px;
+      padding: 24px 16px;
+      margin-bottom: 24px;
+    }
+    .players-label {
+      font-size: 0.9rem;
+      color: #a1a1aa;
+      margin-bottom: 8px;
+    }
+    #players {
+      font-size: 4.5rem;
+      font-weight: bold;
+      color: white;
+      line-height: 1;
+    }
+    #max {
+      font-size: 1rem;
+      color: #71717a;
+    }
+    #motd {
+      font-size: 0.9rem;
+      color: #fef08a;
+      line-height: 1.5;
+      min-height: 60px;
+      white-space: pre-wrap;
+      word-wrap: break-word;
+    }
+    .footer {
+      margin-top: 32px;
+      font-size: 0.75rem;
+      color: #71717a;
+    }
+    button {
+      background: none;
+      border: none;
+      color: #86efac;
+      font-size: 0.75rem;
+      text-decoration: underline;
+      cursor: pointer;
+    }
+    button:hover { color: #22c55e; }
+    @media (max-width: 400px) {
+      h1 { font-size: 1.8rem; }
+      #players { font-size: 3.8rem; }
+    }
   </style>
 </head>
-<body class="min-h-screen flex items-center justify-center">
-  <div class="max-w-md w-full bg-zinc-900 border-4 border-green-500 p-8 rounded-2xl shadow-2xl text-center">
-    <h1 class="text-3xl mb-6 text-yellow-400 minecraft">DaKoolKidz</h1>
-    <div class="text-xl mb-4 text-green-300">All the Mods 10 v5.5</div>
+<body>
+  <div class="container">
+    <h1>DaKoolKidz</h1>
+    <div class="subtitle">All the Mods 10 v5.5</div>
     
-    <div id="status" class="text-2xl mb-8 font-bold"></div>
+    <div id="status"></div>
     
-    <div class="bg-black border-2 border-green-600 p-6 rounded-xl mb-6">
-      <div class="text-sm text-zinc-400 mb-2">Spieler online</div>
-      <div id="players" class="text-6xl font-bold text-white">—</div>
-      <div id="max" class="text-sm text-zinc-500">/ —</div>
+    <div class="players-box">
+      <div class="players-label">Spieler online</div>
+      <div id="players">—</div>
+      <div id="max">/ —</div>
     </div>
 
-    <div id="motd" class="text-sm text-yellow-300 italic min-h-[4em] whitespace-pre-wrap"></div>
+    <div id="motd"></div>
 
-    <div class="mt-8 text-xs text-zinc-500">
+    <div class="footer">
       Zuletzt aktualisiert: <span id="time"></span><br>
-      <button onclick="refresh()" class="mt-3 text-xs underline hover:text-green-400">Jetzt aktualisieren</button>
+      <button onclick="refresh()">Jetzt aktualisieren</button>
     </div>
   </div>
 
   <script>
-    const SERVER = "94.114.156.16";  // Deine IP – Port 25565 ist Default
+    const SERVER = "94.114.156.16";
 
     async function update() {
       try {
         const res = await fetch(`https://api.mcsrvstat.us/2/${SERVER}`);
-        if (!res.ok) throw new Error("API Antwort nicht OK");
+        if (!res.ok) throw new Error("API nicht OK");
 
         const data = await res.json();
 
         document.getElementById("time").textContent = new Date().toLocaleTimeString("de-DE");
 
         if (data.online === true) {
-          document.getElementById("status").innerHTML = 
-            `<span class="text-green-400">● ONLINE</span>`;
+          document.getElementById("status").innerHTML = '<span style="color:#22c55e">● ONLINE</span>';
           document.getElementById("players").textContent = data.players.online;
           document.getElementById("max").textContent = `/ ${data.players.max}`;
-          document.getElementById("motd").innerHTML = data.motd.clean.join("<br>");
+          document.getElementById("motd").innerHTML = data.motd?.clean?.join("<br>") || "Kein MOTD";
         } else {
-          document.getElementById("status").innerHTML = 
-            `<span class="text-red-500">● OFFLINE</span>`;
+          document.getElementById("status").innerHTML = '<span style="color:#ef4444">● OFFLINE</span>';
           document.getElementById("players").textContent = "0";
           document.getElementById("max").textContent = "/ —";
           document.getElementById("motd").textContent = "Server gerade nicht erreichbar";
         }
       } catch (e) {
         console.error(e);
-        document.getElementById("status").innerHTML = `<span class="text-red-500">● FEHLER</span>`;
+        document.getElementById("status").innerHTML = '<span style="color:#ef4444">● FEHLER</span>';
         document.getElementById("players").textContent = "—";
-        document.getElementById("motd").textContent = "API oder Netzwerkproblem – versuch später";
+        document.getElementById("motd").textContent = "Problem mit API/Netzwerk";
       }
     }
 
@@ -70,7 +151,6 @@
       update();
     }
 
-    // Sofort laden + alle 10 Sekunden refresh
     setInterval(update, 10000);
     update();
   </script>
