--- a/index.html
+++ b/index.html
@@ -26,12 +26,18 @@
       padding: 32px 24px;
       box-shadow: 0 10px 30px rgba(0,0,0,0.6);
       text-align: center;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .container:hover {
+      transform: translateY(-8px) scale(1.02);
+      box-shadow: 0 20px 50px rgba(34,197,94,0.4);
     }
     h1 {
       font-size: 2.5rem;
       color: #fbbf24;
       margin-bottom: 8px;
       text-shadow: 3px 3px 0 #000;
+      transition: color 0.4s ease;
     }
     .subtitle {
       font-size: 1.1rem;
@@ -43,6 +49,14 @@
       font-weight: bold;
       margin-bottom: 24px;
       min-height: 30px;
+      transition: transform 0.3s ease;
+    }
+    #status.online {
+      animation: pulse-glow 3s ease-in-out infinite;
+    }
+    @keyframes pulse-glow {
+      0%, 100% { text-shadow: 0 0 10px #22c55e, 0 0 20px #22c55e; transform: scale(1); }
+      50%      { text-shadow: 0 0 20px #86efac, 0 0 40px #86efac; transform: scale(1.05); }
     }
     .players-box {
       background: #000;
@@ -50,6 +64,13 @@
       border-radius: 12px;
       padding: 20px;
       margin-bottom: 24px;
+      transition: all 0.3s ease;
+      cursor: pointer;
+    }
+    .players-box:hover {
+      transform: scale(1.08);
+      border-color: #fbbf24;
+      box-shadow: 0 0 25px rgba(251,191,36,0.5);
     }
     .players-label {
       font-size: 1rem;
@@ -63,7 +84,11 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 8px;
+      gap: 12px;
+      transition: color 0.4s ease;
+    }
+    .players-box:hover .players-display {
+      color: #fbbf24;
     }
     .slash {
       font-size: 3rem;
@@ -89,8 +114,13 @@
       font-size: 0.8rem;
       text-decoration: underline;
       cursor: pointer;
+      transition: all 0.3s ease;
     }
-    button:hover { color: #22c55e; }
+    button:hover {
+      color: #fbbf24;
+      transform: scale(1.15);
+      text-shadow: 0 0 10px #fbbf24;
+    }
     @media (max-width: 400px) {
       h1 { font-size: 2rem; }
       .players-display { font-size: 3.5rem; }
@@ -134,25 +164,29 @@
 
         document.getElementById("time").textContent = new Date().toLocaleTimeString("de-DE");
 
+        const statusEl = document.getElementById("status");
+
         if (data.online === true) {
-          document.getElementById("status").innerHTML = '<span style="color:#22c55e">● ONLINE</span>';
+          statusEl.innerHTML = '<span style="color:#22c55e">● ONLINE</span>';
+          statusEl.classList.add('online');
           document.getElementById("players").textContent = data.players.online;
           document.getElementById("max").textContent = data.players.max;
 
-          // MOTD ohne die Rahmen-Linien (═) – wir nehmen nur clean und filtern unnötige Leerzeilen
           let motdText = (data.motd?.clean || []).join("\n").trim();
-          motdText = motdText.replace(/[=─═]+/g, ''); // Entfernt alle Block-Linien
-          motdText = motdText.replace(/\s+/g, ' ').trim(); // Entfernt überflüssige Leerzeichen
+          motdText = motdText.replace(/[=─═]+/g, '').replace(/\s+/g, ' ').trim();
           document.getElementById("motd").textContent = motdText || "Kein MOTD";
         } else {
-          document.getElementById("status").innerHTML = '<span style="color:#ef4444">● OFFLINE</span>';
+          statusEl.innerHTML = '<span style="color:#ef4444">● OFFLINE</span>';
+          statusEl.classList.remove('online');
           document.getElementById("players").textContent = "0";
           document.getElementById("max").textContent = "—";
           document.getElementById("motd").textContent = "Server gerade nicht erreichbar";
         }
       } catch (e) {
         console.error(e);
-        document.getElementById("status").innerHTML = '<span style="color:#ef4444">● FEHLER</span>';
+        const statusEl = document.getElementById("status");
+        statusEl.innerHTML = '<span style="color:#ef4444">● FEHLER</span>';
+        statusEl.classList.remove('online');
         document.getElementById("players").textContent = "—";
         document.getElementById("max").textContent = "—";
         document.getElementById("motd").textContent = "Problem mit API/Netzwerk";
@@ -165,9 +199,8 @@
       update();
     }
 
-    // Alle 30 Sekunden – besserer Kompromiss zwischen Frische und API-Limit
     setInterval(update, 30000);
-    update(); // Sofort beim Laden
+    update();
   </script>
 </body>
 </html>
