--- a/index.html
+++ b/index.html
@@ -6,259 +6,153 @@
   <title>DaKoolKidz - ATM10 Server Status</title>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --bg: #000;
+      --text: #22c55e;
+      --accent: #fbbf24;
+      --gray: #71717a;
+      --light: #86efac;
+    }
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Press Start 2P', cursive;
-      background: #000;
-      color: #22c55e;
+      background: var(--bg);
+      color: var(--text);
       min-height: 100vh;
-      overflow: hidden; /* verhindert Scrollbalken durch absolute Elemente */
+      overflow-x: hidden;
       position: relative;
-    }
-
-    /* Hintergrund-Layer: Sterne (Parallax) */
-    #stars, #stars2, #stars3 {
-      position: fixed;
-      top: 0; left: 0;
-      right: 0; bottom: 0;
-      pointer-events: none; /* Klicks gehen durch */
-      z-index: 0;
-    }
-
-    #stars {
-      width: 1px; height: 1px;
-      background: transparent;
-      box-shadow: 
-        500px 300px #fff, 1200px 800px #fff, 300px 900px #fff, 1800px 400px #fff,
-        700px 1200px #fff, 1500px 600px #fff, 200px 200px #fff, 900px 1500px #fff,
-        1600px 100px #fff, 400px 1800px #fff, 1100px 700px #fff, 800px 1400px #fff,
-        1400px 300px #fff, 100px 1000px #fff, 1700px 900px #fff, 600px 500px #fff,
-        1300px 1100px #fff, 200px 1600px #fff, 1900px 200px #fff, 50px 800px #fff;
-      animation: moveStars 120s linear infinite;
-      opacity: 0.8;
-    }
-
-    #stars2 {
-      width: 2px; height: 2px;
-      background: transparent;
-      box-shadow: 
-        200px 400px #ddd, 800px 1000px #eee, 1400px 200px #fff, 300px 1300px #ccc,
-        1000px 500px #fff, 1700px 800px #eee, 600px 1500px #ddd, 1200px 300px #fff,
-        400px 700px #eee, 1500px 1200px #ccc, 900px 100px #fff, 1800px 600px #ddd;
-      animation: moveStars 200s linear infinite;
-      opacity: 0.6;
-    }
-
-    #stars3 {
-      width: 3px; height: 3px;
-      background: transparent;
-      box-shadow: 
-        100px 600px #aaa, 1600px 400px #bbb, 700px 1400px #ccc, 1300px 900px #ddd,
-        500px 200px #eee, 1900px 1100px #fff, 800px 800px #ccc, 200px 1700px #aaa;
-      animation: moveStars 300s linear infinite;
-      opacity: 0.4;
-    }
-
-    @keyframes moveStars {
-      from { transform: translateY(0); }
-      to   { transform: translateY(-2000px); } /* Loop durch Scroll nach oben */
-    }
-
-    /* Planeten (einfach, pixelig, bewegen sich langsam) */
-    .planet {
-      position: fixed;
-      border-radius: 50%;
-      z-index: 0;
-      pointer-events: none;
-    }
-
-    #planet1 { /* Blauer Planet mit Ring */
-      width: 80px; height: 80px;
-      background: radial-gradient(circle at 30% 30%, #4f9, #006, #003);
-      top: 20%; left: -100px;
-      animation: movePlanet1 180s linear infinite;
-      box-shadow: 0 0 30px #0af;
-    }
-
-    #planet1::after { /* Ring */
-      content: '';
-      position: absolute;
-      top: 50%; left: -40px;
-      width: 160px; height: 8px;
-      background: rgba(255,255,255,0.3);
-      border-radius: 50%;
-      transform: rotate(25deg);
-    }
-
-    #planet2 { /* Roter Planet */
-      width: 50px; height: 50px;
-      background: radial-gradient(circle at 40% 40%, #f66, #800, #400);
-      top: 60%; right: -80px;
-      animation: movePlanet2 240s linear infinite;
-      box-shadow: 0 0 25px #f33;
-    }
-
-    #planet3 { /* Grüner kleiner Planet */
-      width: 30px; height: 30px;
-      background: radial-gradient(circle at 50% 50%, #0f0, #060);
-      top: 10%; left: 30%;
-      animation: movePlanet3 150s linear infinite;
-      box-shadow: 0 0 15px #0f0;
-    }
-
-    @keyframes movePlanet1 { 0% { transform: translateX(0); } 100% { transform: translateX(200vw); } }
-    @keyframes movePlanet2 { 0% { transform: translateX(0); } 100% { transform: translateX(-200vw); } }
-    @keyframes movePlanet3 { 0% { transform: translate(0, 0); } 100% { transform: translate(150vw, 100vh); } }
-
-    /* Dein Content-Container – jetzt über den Sternen/Planeten */
-    .container {
-      position: relative;
-      z-index: 1;
-      max-width: 500px;
-      width: 100%;
-      background: rgba(24,24,27,0.85); /* halbtransparent, damit Sterne durchscheinen */
-      border: 4px solid #22c55e;
-      border-radius: 16px;
-      padding: 32px 24px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.8);
-      text-align: center;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      backdrop-filter: blur(4px); /* optional: leichter Blur für Cyber-Look */
-    }
-
-    .container:hover {
-      transform: translateY(-8px) scale(1.02);
-      box-shadow: 0 20px 50px rgba(34,197,94,0.5);
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      color: #fbbf24;
-      margin-bottom: 8px;
-      text-shadow: 3px 3px 0 #000;
-      transition: color 0.4s ease;
-    }
-
-    .subtitle {
-      font-size: 1.1rem;
-      color: #86efac;
-      margin-bottom: 32px;
-    }
-
-    #status {
-      font-size: 1.8rem;
-      font-weight: bold;
-      margin-bottom: 24px;
-      min-height: 30px;
-      transition: transform 0.3s ease;
-    }
-
-    #status.online {
-      animation: pulse-glow 3s ease-in-out infinite;
-    }
-
-    @keyframes pulse-glow {
-      0%, 100% { text-shadow: 0 0 10px #22c55e; transform: scale(1); }
-      50%      { text-shadow: 0 0 25px #86efac; transform: scale(1.05); }
-    }
-
-    .players-box {
-      background: rgba(0,0,0,0.7);
-      border: 2px solid #22c55e;
-      border-radius: 12px;
-      padding: 20px;
-      margin-bottom: 24px;
-      transition: all 0.3s ease;
-      cursor: pointer;
-    }
-
-    .players-box:hover {
-      transform: scale(1.08);
-      border-color: #fbbf24;
-      box-shadow: 0 0 25px rgba(251,191,36,0.5);
-    }
-
-    .players-label {
-      font-size: 1rem;
-      color: #a1a1aa;
-      margin-bottom: 12px;
-    }
-
-    .players-display {
-      font-size: 4.2rem;
-      font-weight: bold;
-      color: white;
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 12px;
-      transition: color 0.4s ease;
     }
 
-    .players-box:hover .players-display {
-      color: #fbbf24;
+    /* Sterne Layers */
+    .stars { position: fixed; inset: 0; pointer-events: none; z-index: 0; }
+    .stars1, .stars2, .stars3 { position: absolute; inset: 0; background: transparent; animation: drift linear infinite; }
+    .stars1 { width: 1px; height: 1px; box-shadow: 1200px 400px #fff, 300px 900px #fff, 1800px 200px #fff, 600px 1200px #fff, 1500px 700px #fff, 200px 300px #fff, 900px 1600px #fff, 400px 800px #fff, 1700px 500px #fff, 100px 1400px #fff; opacity: 0.9; animation-duration: 150s; }
+    .stars2 { width: 2px; height: 2px; box-shadow: 800px 600px #eee, 1400px 300px #ddd, 500px 1100px #fff, 1600px 900px #ccc, 200px 1700px #eee, 1000px 400px #fff; opacity: 0.7; animation-duration: 220s; }
+    .stars3 { width: 3px; height: 3px; box-shadow: 400px 200px #aaa, 1300px 800px #bbb, 700px 1500px #ccc, 1900px 100px #ddd; opacity: 0.5; animation-duration: 300s; }
+    @keyframes drift { from { transform: translateY(0); } to { transform: translateY(-2500px); } }
+
+    /* Shooting Stars */
+    .shooting-star {
+      position: absolute;
+      width: 4px; height: 4px;
+      background: #fff;
+      border-radius: 50%;
+      box-shadow: 0 0 20px #fff;
+      animation: shoot linear infinite;
+      opacity: 0;
+    }
+    @keyframes shoot {
+      0% { transform: translate(-100vw, -100vh); opacity: 0; }
+      10% { opacity: 1; }
+      90% { opacity: 1; }
+      100% { transform: translate(200vw, 200vh); opacity: 0; }
     }
 
-    .slash {
-      font-size: 3rem;
-      color: #71717a;
-    }
+    /* Planeten */
+    .planet { position: fixed; border-radius: 50%; z-index: 0; pointer-events: none; }
+    #p1 { width: 90px; height: 90px; background: radial-gradient(#4af, #006); top: 15%; left: -120px; animation: planet1 200s linear infinite; box-shadow: 0 0 40px #0af; }
+    #p1::after { content: ''; position: absolute; inset: -20px; border: 8px solid rgba(255,255,255,0.2); border-radius: 50%; transform: rotate(30deg); }
+    #p2 { width: 60px; height: 60px; background: radial-gradient(#f66, #800); top: 70%; right: -80px; animation: planet2 280s linear infinite; box-shadow: 0 0 30px #f33; }
+    #p3 { width: 40px; height: 40px; background: radial-gradient(#0f0, #060); top: 30%; left: 20%; animation: planet3 160s linear infinite; box-shadow: 0 0 20px #0f0; }
+    @keyframes planet1 { 0% { transform: translateX(0); } 100% { transform: translateX(220vw); } }
+    @keyframes planet2 { 0% { transform: translateX(0); } 100% { transform: translateX(-220vw); } }
+    @keyframes planet3 { 0% { transform: translate(0,0); } 100% { transform: translate(180vw, 120vh); } }
 
-    #motd {
-      font-size: 0.95rem;
-      color: #fef08a;
-      line-height: 1.6;
-      min-height: 60px;
-      white-space: pre-wrap;
-      word-wrap: break-word;
+    /* Content */
+    .container {
+      position: relative;
+      z-index: 1;
+      max-width: 520px;
+      width: 90%;
+      background: rgba(24,24,27,0.88);
+      border: 4px solid var(--text);
+      border-radius: 16px;
+      padding: 32px 24px;
+      box-shadow: 0 15px 40px rgba(0,0,0,0.8);
+      text-align: center;
+      backdrop-filter: blur(6px);
+      transition: transform 0.4s ease;
     }
+    .container:hover { transform: scale(1.02); }
 
-    .footer {
-      margin-top: 32px;
-      font-size: 0.8rem;
-      color: #71717a;
+    h1 { font-size: 2.8rem; color: var(--accent); text-shadow: 4px 4px 0 #000; margin-bottom: 20px; }
+    #icon { width: 80px; height: 80px; border-radius: 12px; margin: 0 auto 16px; display: block; border: 2px solid var(--gray); }
+    #status { font-size: 1.9rem; font-weight: bold; margin: 16px 0 24px; min-height: 35px; }
+    #status.online { animation: pulse 4s infinite; }
+    @keyframes pulse { 0%,100% { text-shadow: 0 0 15px var(--text); } 50% { text-shadow: 0 0 30px var(--light); } }
+
+    .players-box {
+      background: rgba(0,0,0,0.6);
+      border: 3px solid var(--text);
+      border-radius: 12px;
+      padding: 20px;
+      margin: 24px 0;
+      transition: all 0.3s;
     }
+    .players-box:hover { transform: scale(1.06); border-color: var(--accent); box-shadow: 0 0 30px rgba(251,191,36,0.4); }
+    .players-label { font-size: 1.1rem; color: var(--gray); margin-bottom: 12px; }
+    .players-display { font-size: 5rem; color: white; display: flex; align-items: center; justify-content: center; gap: 16px; }
+    .slash { font-size: 3.5rem; color: var(--gray); }
 
-    button {
-      background: none;
+    #motd { font-size: 1rem; color: #fef08a; line-height: 1.7; margin: 20px 0; white-space: pre-wrap; word-break: break-word; }
+    #motd span { font-family: inherit; }
+
+    #players-list { margin: 20px 0; font-size: 0.9rem; color: var(--light); max-height: 120px; overflow-y: auto; }
+    #players-list ul { list-style: none; text-align: left; }
+    #players-list li { margin: 6px 0; }
+
+    .extra-info { font-size: 0.9rem; color: var(--gray); margin: 16px 0; }
+    #countdown { color: var(--accent); font-weight: bold; }
+
+    .join-btn {
+      background: var(--accent);
+      color: #000;
       border: none;
-      color: #86efac;
-      font-size: 0.8rem;
-      text-decoration: underline;
+      padding: 16px 32px;
+      font-size: 1.2rem;
+      border-radius: 12px;
       cursor: pointer;
-      transition: all 0.3s ease;
+      margin: 20px 0 10px;
+      transition: all 0.3s;
     }
+    .join-btn:hover { transform: scale(1.1); box-shadow: 0 0 25px var(--accent); }
 
-    button:hover {
-      color: #fbbf24;
-      transform: scale(1.15);
-      text-shadow: 0 0 10px #fbbf24;
-    }
+    .footer { font-size: 0.8rem; color: var(--gray); margin-top: 20px; }
 
-    @media (max-width: 400px) {
-      h1 { font-size: 2rem; }
-      .players-display { font-size: 3.5rem; }
-      .slash { font-size: 2.5rem; }
+    @media (max-width: 500px) {
+      .players-display { font-size: 3.8rem; }
+      .slash { font-size: 2.8rem; }
+      h1 { font-size: 2.2rem; }
     }
   </style>
 </head>
 <body>
-  <!-- Hintergrund-Elemente -->
-  <div id="stars"></div>
-  <div id="stars2"></div>
-  <div id="stars3"></div>
+  <div class="stars">
+    <div class="stars1"></div>
+    <div class="stars2"></div>
+    <div class="stars3"></div>
+  </div>
 
-  <div class="planet" id="planet1"></div>
-  <div class="planet" id="planet2"></div>
-  <div class="planet" id="planet3"></div>
+  <!-- Shooting Stars (5 zufällige) -->
+  <div class="shooting-star" style="top:10%; left:0; animation-delay:5s; animation-duration:6s;"></div>
+  <div class="shooting-star" style="top:40%; left:0; animation-delay:15s; animation-duration:5s;"></div>
+  <div class="shooting-star" style="top:70%; left:0; animation-delay:25s; animation-duration:7s;"></div>
+  <div class="shooting-star" style="top:20%; left:0; animation-delay:35s; animation-duration:8s;"></div>
+  <div class="shooting-star" style="top:55%; left:0; animation-delay:45s; animation-duration:6s;"></div>
 
-  <!-- Dein Content -->
+  <div class="planet" id="p1"></div>
+  <div class="planet" id="p2"></div>
+  <div class="planet" id="p3"></div>
+
   <div class="container">
+    <img id="icon" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mP8z8BQDwAEhQGAhKmMIQAAAABJRU5ErkJggg==" alt="Server Icon" crossorigin="anonymous">
     <h1>DaKoolKidz</h1>
-    <div class="subtitle">ATM10 v5.5</div>
-    
+
     <div id="status"></div>
-    
+
     <div class="players-box">
       <div class="players-label">Spieler online</div>
       <div class="players-display">
@@ -270,50 +164,87 @@
 
     <div id="motd"></div>
 
+    <div id="players-list"><ul id="player-ul"></ul></div>
+
+    <div class="extra-info">
+      Ping: <span id="latency">—</span> ms<br>
+      Version: <span id="version">—</span><br>
+      <span id="uptime-est">Online seit unbekannt</span>
+    </div>
+
+    <button class="join-btn" onclick="copyIP()">ZUM SERVER (IP kopieren)</button>
+
     <div class="footer">
       Zuletzt aktualisiert: <span id="time"></span><br>
-      <button onclick="refresh()">Jetzt aktualisieren</button>
+      Nächstes Update in: <span id="countdown">30</span> s<br>
+      <button onclick="refresh()" style="background:none;border:none;color:var(--light);cursor:pointer;">Jetzt aktualisieren</button>
     </div>
   </div>
 
   <script>
     const SERVER = "94.114.156.16";
+    let lastOnlineTime = null; // Für grobe "Online seit"
 
     async function update() {
       try {
         const res = await fetch(`https://api.mcsrvstat.us/2/${SERVER}`);
-        if (!res.ok) throw new Error("API Fehler");
-
+        if (!res.ok) throw new Error();
         const data = await res.json();
 
         document.getElementById("time").textContent = new Date().toLocaleTimeString("de-DE");
+        document.getElementById("countdown").textContent = "30";
 
         const statusEl = document.getElementById("status");
-
-        if (data.online === true) {
-          statusEl.innerHTML = '<span style="color:#22c55e">● ONLINE</span>';
+        if (data.online) {
+          statusEl.innerHTML = 'STATUS: <span style="color:#22c55e">ONLINE</span>';
           statusEl.classList.add('online');
+          if (!lastOnlineTime) lastOnlineTime = Date.now();
           document.getElementById("players").textContent = data.players.online;
           document.getElementById("max").textContent = data.players.max;
+          document.getElementById("motd").innerHTML = data.motd?.html?.join("<br>") || "Kein MOTD";
 
-          let motdText = (data.motd?.clean || []).join("\n").trim();
-          motdText = motdText.replace(/[=─═]+/g, '').replace(/\s+/g, ' ').trim();
-          document.getElementById("motd").textContent = motdText || "Kein MOTD";
+          // Icon
+          if (data.icon) document.getElementById("icon").src = data.icon;
+
+          // Latency
+          document.getElementById("latency").textContent = data.debug?.ping ? Math.round(data.debug.ping) : "—";
+
+          // Version
+          document.getElementById("version").textContent = data.version || data.protocol_name || "—";
+
+          // Spielerliste (wenn vorhanden)
+          const listEl = document.getElementById("player-ul");
+          listEl.innerHTML = "";
+          if (data.players.list && data.players.list.length > 0) {
+            data.players.list.forEach(p => {
+              const li = document.createElement("li");
+              li.textContent = p.name || p;
+              listEl.appendChild(li);
+            });
+          } else {
+            listEl.innerHTML = "<li>(keine Namen sichtbar – Query deaktiviert?)</li>";
+          }
+
+          // Online seit (geschätzt)
+          const mins = Math.floor((Date.now() - lastOnlineTime) / 60000);
+          document.getElementById("uptime-est").textContent = `Online seit ca. ${mins} Min`;
         } else {
-          statusEl.innerHTML = '<span style="color:#ef4444">● OFFLINE</span>';
+          statusEl.innerHTML = 'STATUS: <span style="color:#ef4444">OFFLINE</span>';
           statusEl.classList.remove('online');
           document.getElementById("players").textContent = "0";
           document.getElementById("max").textContent = "—";
-          document.getElementById("motd").textContent = "Server gerade nicht erreichbar";
+          document.getElementById("motd").textContent = "Server nicht erreichbar";
+          document.getElementById("latency").textContent = "—";
+          document.getElementById("version").textContent = "—";
+          document.getElementById("player-ul").innerHTML = "";
+          document.getElementById("uptime-est").textContent = "Offline";
+          lastOnlineTime = null;
         }
       } catch (e) {
         console.error(e);
-        const statusEl = document.getElementById("status");
-        statusEl.innerHTML = '<span style="color:#ef4444">● FEHLER</span>';
-        statusEl.classList.remove('online');
+        document.getElementById("status").innerHTML = 'STATUS: <span style="color:#ef4444">FEHLER</span>';
         document.getElementById("players").textContent = "—";
         document.getElementById("max").textContent = "—";
-        document.getElementById("motd").textContent = "Problem mit API/Netzwerk";
       }
     }
 
@@ -323,8 +254,20 @@
       update();
     }
 
+    function copyIP() {
+      navigator.clipboard.writeText(SERVER).then(() => {
+        alert("IP kopiert: " + SERVER + "\nFüge sie in Minecraft hinzu!");
+      }).catch(() => alert("Kopieren fehlgeschlagen – manuell kopieren: " + SERVER));
+    }
+
+    // Countdown
+    setInterval(() => {
+      let cd = parseInt(document.getElementById("countdown").textContent);
+      if (cd > 0) document.getElementById("countdown").textContent = cd - 1;
+    }, 1000);
+
     setInterval(update, 30000);
-    update();
+    update(); // Start
   </script>
 </body>
 </html>
